--- a/inference.ipynb
+++ b/inference.ipynb
@@ -12,7 +12,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 1,
             "id": "240909d6",
             "metadata": {},
             "outputs": [
@@ -23,7 +23,7 @@
                         "PyTorch version: 2.9.1+cu128\n",
                         "CUDA available: True\n",
                         "Device name: NVIDIA RTX A6000\n",
-                        "Device count: 4\n"
+                        "Device count: 3\n"
                     ]
                 }
             ],
@@ -42,7 +42,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "id": "39445060",
             "metadata": {},
             "outputs": [
@@ -50,14 +50,14 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/token_bytes.pt to /home/rs63759/.cache/nanochat/tokenizer/token_bytes.pt...\n",
-                        "Downloaded /home/rs63759/.cache/nanochat/tokenizer/token_bytes.pt\n",
-                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/tokenizer.pkl to /home/rs63759/.cache/nanochat/tokenizer/tokenizer.pkl...\n",
-                        "Downloaded /home/rs63759/.cache/nanochat/tokenizer/tokenizer.pkl\n",
-                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/meta_000650.json to /home/rs63759/.cache/nanochat/chatsft_checkpoints/d32/meta_000650.json...\n",
-                        "Downloaded /home/rs63759/.cache/nanochat/chatsft_checkpoints/d32/meta_000650.json\n",
-                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/model_000650.pt to /home/rs63759/.cache/nanochat/chatsft_checkpoints/d32/model_000650.pt...\n",
-                        "Downloaded /home/rs63759/.cache/nanochat/chatsft_checkpoints/d32/model_000650.pt\n",
+                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/token_bytes.pt to /home/jl77863/.cache/nanochat/tokenizer/token_bytes.pt...\n",
+                        "Downloaded /home/jl77863/.cache/nanochat/tokenizer/token_bytes.pt\n",
+                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/tokenizer.pkl to /home/jl77863/.cache/nanochat/tokenizer/tokenizer.pkl...\n",
+                        "Downloaded /home/jl77863/.cache/nanochat/tokenizer/tokenizer.pkl\n",
+                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/meta_000650.json to /home/jl77863/.cache/nanochat/chatsft_checkpoints/d32/meta_000650.json...\n",
+                        "Downloaded /home/jl77863/.cache/nanochat/chatsft_checkpoints/d32/meta_000650.json\n",
+                        "Downloading https://huggingface.co/karpathy/nanochat-d32/resolve/main/model_000650.pt to /home/jl77863/.cache/nanochat/chatsft_checkpoints/d32/model_000650.pt...\n",
+                        "Downloaded /home/jl77863/.cache/nanochat/chatsft_checkpoints/d32/model_000650.pt\n",
                         "All files downloaded successfully.\n"
                     ]
                 }
@@ -100,10 +100,42 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "id": "45eef9b8",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "2025-11-23 20:40:48,814 - nanochat.common - \u001b[32m\u001b[1mINFO\u001b[0m - Distributed world size: 1\n",
+                        "2025-11-23 20:40:48,816 - nanochat.checkpoint_manager - \u001b[32m\u001b[1mINFO\u001b[0m - Loading model from /home/jl77863/.cache/nanochat/chatsft_checkpoints/d32 with step 650\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Initializing...\n",
+                        "Autodetected device type: cuda\n",
+                        "Using device: cuda\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "2025-11-23 20:40:54,476 - nanochat.checkpoint_manager - \u001b[32m\u001b[1mINFO\u001b[0m - Building model with config: {'sequence_len': 2048, 'vocab_size': 65536, 'n_layer': 32, 'n_head': 16, 'n_kv_head': 16, 'n_embd': 2048}\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Model loaded successfully.\n"
+                    ]
+                }
+            ],
             "source": [
                 "import sys\n",
                 "import os\n",
@@ -145,7 +177,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -186,18 +218,61 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "User: Hello! Who are you?\n",
+                        "Assistant: I'm a chatbot that speaks in a friendly, conversational tone. I'm here to help you with any questions or issues you might be facing. I don't have a physical presence, but I'm here to listen and provide support. Feel free to share your concerns, ask questions, or seek advice, and I'll do my best to help. What's on your mind today?<|assistant_end|>\n",
+                        "\n"
+                    ]
+                }
+            ],
             "source": [
                 "chat(\"Hello! Who are you?\")"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "User: Write a short poem about coding.\n",
+                        "Assistant: In the realm of lines and symbols,\n",
+                        "A language of code, for all to know,\n",
+                        "From lowly programmers to the great,\n",
+                        "The code is the code, it's the same.\n",
+                        "\n",
+                        "Here, a programmer's work begins,\n",
+                        "In the digital world, where code does reside,\n",
+                        "The code is the secret key,\n",
+                        "To unlock the secrets of the computer.\n",
+                        "\n",
+                        "It's not just about writing code,\n",
+                        "It's about solving problems too,\n",
+                        "The code is the solution's name,\n",
+                        "The final touch, that makes it complete.\n",
+                        "\n",
+                        "Yet, the code can be wrong,\n",
+                        "And flaws can appear, in the code's design,\n",
+                        "But that's not a problem, for the code's sake,\n",
+                        "For it's the code's purpose, to make things happen.\n",
+                        "\n",
+                        "So, the next time you write code,\n",
+                        "Think of the code as your friend,\n",
+                        "For it's the code that builds the world,\n",
+                        "And makes the digital world, our home.<|assistant_end|>\n",
+                        "\n"
+                    ]
+                }
+            ],
             "source": [
                 "chat(\"Write a short poem about coding.\")"
             ]
