--- a/grpo_gsm8k.ipynb
+++ b/grpo_gsm8k.ipynb
@@ -473,7 +473,19 @@
                     "output_type": "stream",
                     "text": [
                         "Starting training...\n",
-                        "--- Eval at step 0 ---\n"
+                        "--- Eval at step 0 ---\n",
+                        "Step 0 | Mean Reward: 0.0625 | LR Multiplier: 1.0000\n",
+                        "Step 1 | Mean Reward: 0.0000 | LR Multiplier: 0.9995\n",
+                        "Step 2 | Mean Reward: 0.0000 | LR Multiplier: 0.9989\n",
+                        "Step 3 | Mean Reward: 0.0625 | LR Multiplier: 0.9984\n",
+                        "Step 4 | Mean Reward: 0.0000 | LR Multiplier: 0.9979\n",
+                        "Step 5 | Mean Reward: 0.0000 | LR Multiplier: 0.9973\n",
+                        "Step 6 | Mean Reward: 0.0625 | LR Multiplier: 0.9968\n",
+                        "Step 7 | Mean Reward: 0.1250 | LR Multiplier: 0.9963\n",
+                        "Step 8 | Mean Reward: 0.0000 | LR Multiplier: 0.9957\n",
+                        "Step 9 | Mean Reward: 0.1250 | LR Multiplier: 0.9952\n",
+                        "Step 10 | Mean Reward: 0.0000 | LR Multiplier: 0.9946\n",
+                        "Step 11 | Mean Reward: 0.0000 | LR Multiplier: 0.9941\n"
                     ]
                 }
             ],
