push train script

--- a/grpo_gsm8k.ipynb
+++ b/grpo_gsm8k.ipynb
@@ -485,7 +485,138 @@
                         "Step 8 | Mean Reward: 0.0000 | LR Multiplier: 0.9957\n",
                         "Step 9 | Mean Reward: 0.1250 | LR Multiplier: 0.9952\n",
                         "Step 10 | Mean Reward: 0.0000 | LR Multiplier: 0.9946\n",
-                        "Step 11 | Mean Reward: 0.0000 | LR Multiplier: 0.9941\n"
+                        "Step 11 | Mean Reward: 0.0000 | LR Multiplier: 0.9941\n",
+                        "Step 12 | Mean Reward: 0.0625 | LR Multiplier: 0.9936\n",
+                        "Step 13 | Mean Reward: 0.1250 | LR Multiplier: 0.9930\n",
+                        "Step 14 | Mean Reward: 0.0000 | LR Multiplier: 0.9925\n",
+                        "Step 15 | Mean Reward: 0.0000 | LR Multiplier: 0.9920\n",
+                        "Step 16 | Mean Reward: 0.0625 | LR Multiplier: 0.9914\n",
+                        "Step 17 | Mean Reward: 0.0000 | LR Multiplier: 0.9909\n",
+                        "Step 18 | Mean Reward: 0.0000 | LR Multiplier: 0.9904\n",
+                        "Step 19 | Mean Reward: 0.0000 | LR Multiplier: 0.9898\n",
+                        "--- Eval at step 20 ---\n",
+                        "Step 20 | Mean Reward: 0.0625 | LR Multiplier: 0.9893\n",
+                        "Step 21 | Mean Reward: 0.0625 | LR Multiplier: 0.9888\n",
+                        "Step 22 | Mean Reward: 0.0625 | LR Multiplier: 0.9882\n",
+                        "Step 23 | Mean Reward: 0.0625 | LR Multiplier: 0.9877\n",
+                        "Step 24 | Mean Reward: 0.0625 | LR Multiplier: 0.9872\n",
+                        "Step 25 | Mean Reward: 0.0625 | LR Multiplier: 0.9866\n",
+                        "Step 26 | Mean Reward: 0.0625 | LR Multiplier: 0.9861\n",
+                        "Step 27 | Mean Reward: 0.1250 | LR Multiplier: 0.9855\n",
+                        "Step 28 | Mean Reward: 0.0625 | LR Multiplier: 0.9850\n",
+                        "Step 29 | Mean Reward: 0.0000 | LR Multiplier: 0.9845\n",
+                        "Step 30 | Mean Reward: 0.0000 | LR Multiplier: 0.9839\n",
+                        "Step 31 | Mean Reward: 0.0625 | LR Multiplier: 0.9834\n",
+                        "Step 32 | Mean Reward: 0.0625 | LR Multiplier: 0.9829\n",
+                        "Step 33 | Mean Reward: 0.0000 | LR Multiplier: 0.9823\n",
+                        "Step 34 | Mean Reward: 0.0625 | LR Multiplier: 0.9818\n",
+                        "Step 35 | Mean Reward: 0.1875 | LR Multiplier: 0.9813\n",
+                        "Step 36 | Mean Reward: 0.0625 | LR Multiplier: 0.9807\n",
+                        "Step 37 | Mean Reward: 0.1250 | LR Multiplier: 0.9802\n",
+                        "Step 38 | Mean Reward: 0.0000 | LR Multiplier: 0.9797\n",
+                        "Step 39 | Mean Reward: 0.1250 | LR Multiplier: 0.9791\n",
+                        "--- Eval at step 40 ---\n",
+                        "Step 40 | Mean Reward: 0.0625 | LR Multiplier: 0.9786\n",
+                        "Step 41 | Mean Reward: 0.0625 | LR Multiplier: 0.9781\n",
+                        "Step 42 | Mean Reward: 0.0000 | LR Multiplier: 0.9775\n",
+                        "Step 43 | Mean Reward: 0.1875 | LR Multiplier: 0.9770\n",
+                        "Step 44 | Mean Reward: 0.0000 | LR Multiplier: 0.9764\n",
+                        "Step 45 | Mean Reward: 0.0000 | LR Multiplier: 0.9759\n",
+                        "Step 46 | Mean Reward: 0.0000 | LR Multiplier: 0.9754\n",
+                        "Step 47 | Mean Reward: 0.0000 | LR Multiplier: 0.9748\n",
+                        "Step 48 | Mean Reward: 0.0625 | LR Multiplier: 0.9743\n",
+                        "Step 49 | Mean Reward: 0.0000 | LR Multiplier: 0.9738\n",
+                        "Step 50 | Mean Reward: 0.0625 | LR Multiplier: 0.9732\n",
+                        "Step 51 | Mean Reward: 0.1875 | LR Multiplier: 0.9727\n",
+                        "Step 52 | Mean Reward: 0.0000 | LR Multiplier: 0.9722\n",
+                        "Step 53 | Mean Reward: 0.1250 | LR Multiplier: 0.9716\n",
+                        "Step 54 | Mean Reward: 0.0000 | LR Multiplier: 0.9711\n",
+                        "Step 55 | Mean Reward: 0.0000 | LR Multiplier: 0.9706\n",
+                        "Step 56 | Mean Reward: 0.0000 | LR Multiplier: 0.9700\n",
+                        "Step 57 | Mean Reward: 0.1250 | LR Multiplier: 0.9695\n",
+                        "Step 58 | Mean Reward: 0.0625 | LR Multiplier: 0.9690\n",
+                        "Step 59 | Mean Reward: 0.3750 | LR Multiplier: 0.9684\n",
+                        "--- Eval at step 60 ---\n",
+                        "Step 60 | Mean Reward: 0.0000 | LR Multiplier: 0.9679\n",
+                        "Step 61 | Mean Reward: 0.0000 | LR Multiplier: 0.9673\n",
+                        "Step 62 | Mean Reward: 0.1875 | LR Multiplier: 0.9668\n",
+                        "Step 63 | Mean Reward: 0.0625 | LR Multiplier: 0.9663\n",
+                        "Step 64 | Mean Reward: 0.1250 | LR Multiplier: 0.9657\n",
+                        "Step 65 | Mean Reward: 0.1875 | LR Multiplier: 0.9652\n",
+                        "Step 66 | Mean Reward: 0.0000 | LR Multiplier: 0.9647\n",
+                        "Step 67 | Mean Reward: 0.0000 | LR Multiplier: 0.9641\n",
+                        "Step 68 | Mean Reward: 0.0000 | LR Multiplier: 0.9636\n",
+                        "Step 69 | Mean Reward: 0.1250 | LR Multiplier: 0.9631\n",
+                        "Step 70 | Mean Reward: 0.0625 | LR Multiplier: 0.9625\n",
+                        "Step 71 | Mean Reward: 0.0625 | LR Multiplier: 0.9620\n",
+                        "Step 72 | Mean Reward: 0.0000 | LR Multiplier: 0.9615\n",
+                        "Step 73 | Mean Reward: 0.1250 | LR Multiplier: 0.9609\n",
+                        "Step 74 | Mean Reward: 0.0000 | LR Multiplier: 0.9604\n",
+                        "Step 75 | Mean Reward: 0.0000 | LR Multiplier: 0.9599\n",
+                        "Step 76 | Mean Reward: 0.0000 | LR Multiplier: 0.9593\n",
+                        "Step 77 | Mean Reward: 0.3125 | LR Multiplier: 0.9588\n",
+                        "Step 78 | Mean Reward: 0.0625 | LR Multiplier: 0.9582\n",
+                        "Step 79 | Mean Reward: 0.0000 | LR Multiplier: 0.9577\n",
+                        "--- Eval at step 80 ---\n",
+                        "Step 80 | Mean Reward: 0.1875 | LR Multiplier: 0.9572\n",
+                        "Step 81 | Mean Reward: 0.0625 | LR Multiplier: 0.9566\n",
+                        "Step 82 | Mean Reward: 0.0000 | LR Multiplier: 0.9561\n",
+                        "Step 83 | Mean Reward: 0.0000 | LR Multiplier: 0.9556\n",
+                        "Step 84 | Mean Reward: 0.0625 | LR Multiplier: 0.9550\n",
+                        "Step 85 | Mean Reward: 0.1250 | LR Multiplier: 0.9545\n",
+                        "Step 86 | Mean Reward: 0.1250 | LR Multiplier: 0.9540\n",
+                        "Step 87 | Mean Reward: 0.0000 | LR Multiplier: 0.9534\n",
+                        "Step 88 | Mean Reward: 0.0625 | LR Multiplier: 0.9529\n",
+                        "Step 89 | Mean Reward: 0.0625 | LR Multiplier: 0.9524\n",
+                        "Step 90 | Mean Reward: 0.0625 | LR Multiplier: 0.9518\n",
+                        "Step 91 | Mean Reward: 0.1250 | LR Multiplier: 0.9513\n",
+                        "Step 92 | Mean Reward: 0.0000 | LR Multiplier: 0.9507\n",
+                        "Step 93 | Mean Reward: 0.0625 | LR Multiplier: 0.9502\n",
+                        "Step 94 | Mean Reward: 0.0625 | LR Multiplier: 0.9497\n",
+                        "Step 95 | Mean Reward: 0.1250 | LR Multiplier: 0.9491\n",
+                        "Step 96 | Mean Reward: 0.0625 | LR Multiplier: 0.9486\n",
+                        "Step 97 | Mean Reward: 0.0625 | LR Multiplier: 0.9481\n",
+                        "Step 98 | Mean Reward: 0.0625 | LR Multiplier: 0.9475\n",
+                        "Step 99 | Mean Reward: 0.0000 | LR Multiplier: 0.9470\n",
+                        "--- Eval at step 100 ---\n",
+                        "Step 100 | Mean Reward: 0.1875 | LR Multiplier: 0.9465\n",
+                        "Step 101 | Mean Reward: 0.0625 | LR Multiplier: 0.9459\n",
+                        "Step 102 | Mean Reward: 0.0000 | LR Multiplier: 0.9454\n",
+                        "Step 103 | Mean Reward: 0.1250 | LR Multiplier: 0.9449\n",
+                        "Step 104 | Mean Reward: 0.0000 | LR Multiplier: 0.9443\n",
+                        "Step 105 | Mean Reward: 0.1250 | LR Multiplier: 0.9438\n",
+                        "Step 106 | Mean Reward: 0.0000 | LR Multiplier: 0.9433\n",
+                        "Step 107 | Mean Reward: 0.0000 | LR Multiplier: 0.9427\n",
+                        "Step 108 | Mean Reward: 0.0000 | LR Multiplier: 0.9422\n",
+                        "Step 109 | Mean Reward: 0.1875 | LR Multiplier: 0.9416\n",
+                        "Step 110 | Mean Reward: 0.0625 | LR Multiplier: 0.9411\n",
+                        "Step 111 | Mean Reward: 0.1875 | LR Multiplier: 0.9406\n",
+                        "Step 112 | Mean Reward: 0.0000 | LR Multiplier: 0.9400\n",
+                        "Step 113 | Mean Reward: 0.1250 | LR Multiplier: 0.9395\n",
+                        "Step 114 | Mean Reward: 0.0625 | LR Multiplier: 0.9390\n",
+                        "Step 115 | Mean Reward: 0.0000 | LR Multiplier: 0.9384\n",
+                        "Step 116 | Mean Reward: 0.0000 | LR Multiplier: 0.9379\n",
+                        "Step 117 | Mean Reward: 0.1250 | LR Multiplier: 0.9374\n",
+                        "Step 118 | Mean Reward: 0.0000 | LR Multiplier: 0.9368\n",
+                        "Step 119 | Mean Reward: 0.0000 | LR Multiplier: 0.9363\n",
+                        "--- Eval at step 120 ---\n",
+                        "Step 120 | Mean Reward: 0.0625 | LR Multiplier: 0.9358\n",
+                        "Step 121 | Mean Reward: 0.1250 | LR Multiplier: 0.9352\n",
+                        "Step 122 | Mean Reward: 0.1250 | LR Multiplier: 0.9347\n",
+                        "Step 123 | Mean Reward: 0.0000 | LR Multiplier: 0.9342\n",
+                        "Step 124 | Mean Reward: 0.0000 | LR Multiplier: 0.9336\n",
+                        "Step 125 | Mean Reward: 0.0625 | LR Multiplier: 0.9331\n",
+                        "Step 126 | Mean Reward: 0.1875 | LR Multiplier: 0.9325\n",
+                        "Step 127 | Mean Reward: 0.0625 | LR Multiplier: 0.9320\n",
+                        "Step 128 | Mean Reward: 0.0000 | LR Multiplier: 0.9315\n",
+                        "Step 129 | Mean Reward: 0.0625 | LR Multiplier: 0.9309\n",
+                        "Step 130 | Mean Reward: 0.0000 | LR Multiplier: 0.9304\n",
+                        "Step 131 | Mean Reward: 0.1250 | LR Multiplier: 0.9299\n",
+                        "Step 132 | Mean Reward: 0.0000 | LR Multiplier: 0.9293\n",
+                        "Step 133 | Mean Reward: 0.0625 | LR Multiplier: 0.9288\n",
+                        "Step 134 | Mean Reward: 0.0000 | LR Multiplier: 0.9283\n",
+                        "Step 135 | Mean Reward: 0.0000 | LR Multiplier: 0.9277\n",
+                        "Step 136 | Mean Reward: 0.2500 | LR Multiplier: 0.9272\n"
                     ]
                 }
             ],
